home page end,financial page added

--- a/pages/financial.html
+++ b/pages/financial.html
@@ -22,7 +22,7 @@
       <!-- desktop -->
       <div class="hidden lg:flex items-center gap-2 justify-between relative">
         <!-- logo -->
-        <a href="#" class="inline-block py-3">
+        <a href="../index.html" class="inline-block py-3">
           <img src="../src/images/logo.png" alt="">
         </a>
 
@@ -263,7 +263,7 @@
       <!-- mobile -->
       <div class="flex lg:hidden items-center justify-between">
         <!-- logo -->
-        <a href="#" class="inline-block py-3">
+        <a href="../index.html" class="inline-block py-3">
           <img src="../src/images/logo.png" alt="">
         </a>
 
@@ -563,7 +563,7 @@
   <div class="video-modal h-screen w-screen fixed inset-0 z-50 items-center justify-center hidden p-4 md:p-6">
     <div class="modal-overlay bg-black/50 h-screen w-screen absolute inset-0 z-10"></div>
     <div class="max-w-[1200px] bg-white h-auto rounded-xl overflow-hidden relative z-20 shadow-xl">
-      <video controls autoplay>
+      <video controls autoPlay>
         <source src="../src/videos/demo.mp4" type="video/mp4"/>
       </video>
 
