--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- desktop -->
       <div class="hidden lg:flex items-center gap-2 justify-between relative">
         <!-- logo -->
-        <a href="#" class="inline-block py-3">
+        <a href="index.html" class="inline-block py-3">
           <img src="src/images/logo.png" alt="">
         </a>
 
@@ -263,7 +263,7 @@
       <!-- mobile -->
       <div class="flex lg:hidden items-center justify-between">
         <!-- logo -->
-        <a href="#" class="inline-block py-3">
+        <a href="index.html" class="inline-block py-3">
           <img src="src/images/logo.png" alt="">
         </a>
 
