financial end, saas1 banner added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <i class="ph ph-caret-down"></i>
             </button>
 
-            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-full bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
+            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-[calc(100%-2px)] bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
               <ul class="space-y-6 p-6">
                 <li>
                   <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Mobile App Showcase v.1</a>
@@ -87,7 +87,7 @@
               <i class="ph ph-caret-down"></i>
             </button>
 
-            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-full bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
+            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-[calc(100%-2px)] bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
               <ul class="space-y-6 p-6">
                 <li>
                   <a href="#" class="text-sm text-gray-700 transition-all duration-300 hover:text-secondary">Single Post</a>
@@ -120,7 +120,7 @@
               <i class="ph ph-caret-down"></i>
             </button>
 
-            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-full bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
+            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-[calc(100%-2px)] bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
               <div class="space-y-6 p-6">
                 <div>
                   <h5 class="pb-6 text-sm font-bold font-sfBold text-gray-900">Error page</h5>
@@ -190,7 +190,7 @@
               <i class="ph ph-caret-down"></i>
             </button>
 
-            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-full bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
+            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-[calc(100%-2px)] bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
               <div class="p-6">
                 <h5 class="pb-6 text-sm font-bold font-sfBold text-gray-900">Accounts</h5>
                 <ul class="space-y-6">
@@ -223,7 +223,7 @@
               <i class="ph ph-caret-down"></i>
             </button>
 
-            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-full bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
+            <div class="megamenu flex justify-between w-[670px] absolute left-1/2 -translate-x-1/2 top-[calc(100%-2px)] bg-white z-20 border border-gray-300 rounded-[10px] overflow-hidden transition-all duration-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible">
               <div class="p-6">
                 <h5 class="pb-6 text-sm font-bold font-sfBold text-gray-900">Services</h5>
                 <ul class="space-y-6">
@@ -759,9 +759,9 @@
             <div class="overflow-hidden featured-blog-card rounded-lg">
               <div class="w-full h-[300px] relative">
                 <img src="src/images/featured/blog-1.png" alt="" class="w-full h-full object-cover">
-                <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                   <i class="ph ph-bookmark-simple text-primary-900"></i>
-                </span>
+                </button>
               </div>
 
               <div class="p-4">
@@ -790,9 +790,9 @@
             <div class="overflow-hidden featured-blog-card rounded-lg">
               <div class="w-full h-[300px] relative">
                 <img src="src/images/featured/blog-2.png" alt="" class="w-full h-full object-cover">
-                <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                   <i class="ph ph-bookmark-simple text-primary-900"></i>
-                </span>
+                </button>
               </div>
 
               <div class="p-4">
@@ -821,9 +821,9 @@
             <div class="overflow-hidden featured-blog-card rounded-lg">
               <div class="w-full h-[300px] relative">
                 <img src="src/images/featured/blog-3.png" alt="" class="w-full h-full object-cover">
-                <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                   <i class="ph ph-bookmark-simple text-primary-900"></i>
-                </span>
+                </button>
               </div>
 
               <div class="p-4">
@@ -852,9 +852,9 @@
             <div class="overflow-hidden featured-blog-card rounded-lg">
               <div class="w-full h-[300px] relative">
                 <img src="src/images/featured/blog-4.png" alt="" class="w-full h-full object-cover">
-                <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                   <i class="ph ph-bookmark-simple text-primary-900"></i>
-                </span>
+                </button>
               </div>
 
               <div class="p-4">
@@ -883,9 +883,9 @@
             <div class="overflow-hidden featured-blog-card rounded-lg">
               <div class="w-full h-[300px] relative">
                 <img src="src/images/featured/blog-5.png" alt="" class="w-full h-full object-cover">
-                <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                   <i class="ph ph-bookmark-simple text-primary-900"></i>
-                </span>
+                </button>
               </div>
 
               <div class="p-4">
@@ -914,9 +914,9 @@
             <div class="overflow-hidden featured-blog-card rounded-lg">
               <div class="w-full h-[300px] relative">
                 <img src="src/images/featured/blog-6.png" alt="" class="w-full h-full object-cover">
-                <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                   <i class="ph ph-bookmark-simple text-primary-900"></i>
-                </span>
+                </button>
               </div>
 
               <div class="p-4">
@@ -945,9 +945,9 @@
             <div class="overflow-hidden featured-blog-card rounded-lg">
               <div class="w-full h-[300px] relative">
                 <img src="src/images/featured/blog-7.png" alt="" class="w-full h-full object-cover">
-                <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+                <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                   <i class="ph ph-bookmark-simple text-primary-900"></i>
-                </span>
+                </button>
               </div>
 
               <div class="p-4">
@@ -982,9 +982,9 @@
         <div class="overflow-hidden rounded-[10px] border border-gray-300 grid grid-cols-1 md:grid-cols-3 items-center">
           <div class="h-[277px] md:h-full relative shrink-0">
             <img src="src/images/featured/blog-8.png" alt="" class="w-full h-full object-cover">
-            <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-4 right-4">
+            <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-4 right-4">
               <i class="ph ph-bookmark-simple text-primary-900"></i>
-            </span>
+            </button>
           </div>
 
           <div class="md:col-span-2 px-4 md:px-6 py-3">
@@ -1043,9 +1043,9 @@
           <div class="overflow-hidden featured-blog-card rounded-lg mix travel nature study photo">
             <div class="w-full h-[300px] relative">
               <img src="src/images/latest/blog-1.png" alt="" class="w-full h-full object-cover">
-              <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+              <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                 <i class="ph ph-bookmark-simple text-primary-900"></i>
-              </span>
+              </button>
             </div>
 
             <div class="p-4">
@@ -1072,9 +1072,9 @@
           <div class="overflow-hidden featured-blog-card rounded-lg mix tech nature study business">
             <div class="w-full h-[300px] relative">
               <img src="src/images/latest/blog-6.png" alt="" class="w-full h-full object-cover">
-              <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+              <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                 <i class="ph ph-bookmark-simple text-primary-900"></i>
-              </span>
+              </button>
             </div>
 
             <div class="p-4">
@@ -1101,9 +1101,9 @@
           <div class="overflow-hidden featured-blog-card rounded-lg mix nature photo business">
             <div class="w-full h-[300px] relative">
               <img src="src/images/latest/blog-5.png" alt="" class="w-full h-full object-cover">
-              <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+              <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                 <i class="ph ph-bookmark-simple text-primary-900"></i>
-              </span>
+              </button>
             </div>
 
             <div class="p-4">
@@ -1130,9 +1130,9 @@
           <div class="lg:col-span-3 overflow-hidden featured-blog-card rounded-lg mix nature">
             <div class="w-full h-[300px] relative lg:hidden">
               <img src="src/images/latest/blog-5.png" alt="" class="w-full h-full object-cover">
-              <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+              <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                 <i class="ph ph-bookmark-simple text-primary-900"></i>
-              </span>
+              </button>
             </div>
 
             <div class="p-4">
@@ -1159,9 +1159,9 @@
           <div class="overflow-hidden featured-blog-card rounded-lg mix study tech">
             <div class="w-full h-[300px] relative">
               <img src="src/images/latest/blog-4.png" alt="" class="w-full h-full object-cover">
-              <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+              <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                 <i class="ph ph-bookmark-simple text-primary-900"></i>
-              </span>
+              </button>
             </div>
 
             <div class="p-4">
@@ -1188,9 +1188,9 @@
           <div class="overflow-hidden featured-blog-card rounded-lg mix photo travel tech">
             <div class="w-full h-[300px] relative">
               <img src="src/images/latest/blog-3.png" alt="" class="w-full h-full object-cover">
-              <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+              <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                 <i class="ph ph-bookmark-simple text-primary-900"></i>
-              </span>
+              </button>
             </div>
 
             <div class="p-4">
@@ -1217,9 +1217,9 @@
           <div class="overflow-hidden featured-blog-card rounded-lg mix business travel">
             <div class="w-full h-[300px] relative">
               <img src="src/images/latest/blog-2.png" alt="" class="w-full h-full object-cover">
-              <span class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
+              <button type="button" class="h-9 w-9 bg-white rounded-full flex items-center justify-center absolute top-6 right-6">
                 <i class="ph ph-bookmark-simple text-primary-900"></i>
-              </span>
+              </button>
             </div>
 
             <div class="p-4">
@@ -1458,7 +1458,7 @@
   </footer>
   <!-- footer end -->
 
-  <!-- swiper -->
+  <!-- js -->
   <script src="src/js/jquery-3.6.1.min.js"></script>
   <script src="src/js/swiper-bundle.min.js"></script>
   <script src="src/js/mixitup.min.js"></script>
