--- a/pages/saas1.html
+++ b/pages/saas1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cubeicals | Financial Consulting</title>
+  <title>Cubeicals | Saas Version 1</title>
 
   <!-- phosphor icon -->
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
@@ -507,6 +507,217 @@
       </div>
     </section>
     <!-- banner end -->
+
+    <!-- task start -->
+    <section class="py-10 lg:py-16">
+      <div class="container">
+        <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-6">
+          <div>
+            <h2 class="text-xl lg:text-[40px] lg:leading-[54px] font-bold font-sfBold text-gray-800">All your tasks & communications together</h2>
+            <p class="text-sm lg:text-base text-gray-600 pt-2">Add unlimited people. Easy and familiar to use. Productive and focused chat related to a task and/or a document. Searchable content by keyword.</p>
+          </div>
+
+          <img src="../src/images/saas/task.png" alt="" class="w-full">
+        </div>
+      </div>
+    </section>
+    <!-- task end -->
+
+    <!-- manage start -->
+    <section class="py-10 lg:py-16">
+      <div class="container">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
+          <div class="shadow-[0px_0px_40px_0px_rgba(57,70,79,0.12)] rounded-[20px] overflow-hidden h-fit">
+            <img src="../src/images/saas/manage.png" alt="" class="w-full">
+          </div>
+
+          <div>
+            <h2 class="text-xl lg:text-[40px] font-sfBold font-bold text-gray-800 pb-6">Manage Your Work</h2>
+            <ul class="lg:ml-6 space-y-4">
+              <li class="flex items-center gap-4 text-sm lg:text-base text-gray-600">
+                <i class="ph ph-check-circle text-secondary text-2xl"></i>
+                Strong undertaking the board
+              </li>
+              <li class="flex items-center gap-4 text-sm lg:text-base text-gray-600">
+                <i class="ph ph-check-circle text-secondary text-2xl"></i>
+                Transparent work management
+              </li>
+              <li class="flex items-center gap-4 text-sm lg:text-base text-gray-600">
+                <i class="ph ph-check-circle text-secondary text-2xl"></i>
+                Manage work & focus on the most important tasks
+              </li>
+              <li class="flex items-center gap-4 text-sm lg:text-base text-gray-600">
+                <i class="ph ph-check-circle text-secondary text-2xl"></i>
+                Track your progress with interactive charts
+              </li>
+              <li class="flex items-center gap-4 text-sm lg:text-base text-gray-600">
+                <i class="ph ph-check-circle text-secondary text-2xl"></i>
+                Easiest way to track time spent on tasks
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- manage end -->
+
+    <!-- how-works start -->
+    <section class="py-10 how-works">
+      <div class="container">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
+          <div>
+            <h6 class="text-sm lg:text-base text-secondary">how it works</h6>
+            <h2 class="text-xl lg:text-[40px] lg:leading-[54px] font-sfBold font-bold text-gray-800 pt-2 pb-4">Upload & Download Files</h2>
+            <p class="text-sm lg:text-base text-gray-600">Create, edit, copy, move, download your files easily, everywhere, every time. Use it as your personal.</p>
+            <ul id="how-works-tabs-nav" class="space-y-4 mt-10">
+              <li>
+                <a href="#tab1" class="w-full max-w-[355px] flex items-center px-10 py-5 gap-[10px] text-base font-bold font-sfBold text-gray-800 rounded-[10px]">
+                  <img src="../src/images/icons/star.svg" alt="">
+                  Manageable Sidebar
+                </a>
+              </li>
+              <li>
+                <a href="#tab2" class="w-full max-w-[355px] flex items-center px-10 py-5 gap-[10px] text-base font-bold font-sfBold text-gray-800 rounded-[10px]">
+                  <img src="../src/images/icons/suitcase.svg" alt="">
+                  Work Statement
+                </a>
+              </li>
+              <li>
+                <a href="#tab3" class="w-full max-w-[355px] flex items-center px-10 py-5 gap-[10px] text-base font-bold font-sfBold text-gray-800 rounded-[10px]">
+                  <img src="../src/images/icons/flag.svg" alt="">
+                  Project Statistics
+                </a>
+              </li>
+              <li>
+                <a href="#tab4" class="w-full max-w-[355px] flex items-center px-10 py-5 gap-[10px] text-base font-bold font-sfBold text-gray-800 rounded-[10px]">
+                  <img src="../src/images/icons/trophy.svg" alt="">
+                  Project Summary
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <div id="tab1" class="how-works-tab-content">
+              <img src="../src/images/saas/sidebar.png" alt="">
+            </div>
+            <div id="tab2" class="how-works-tab-content">
+              <img src="../src/images/saas/statement.png" alt="">
+            </div>
+            <div id="tab3" class="how-works-tab-content">
+              <img src="../src/images/saas/statistics.png" alt="">
+            </div>
+            <div id="tab4" class="how-works-tab-content">
+              <img src="../src/images/saas/summary.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- how-works end -->
+
+    <!-- user-interface start -->
+    <section class="py-10">
+      <div class="container">
+        <h2 class="max-w-[510px] mx-auto text-center text-xl lg:text-[40px] lg:leading-[54px] font-sfBold font-bold text-gray-800 pb-10">Beautiful, modern and clean user interfaces</h2>
+        <img src="../src/images/saas/user-interface.png" alt="" class="w-full">
+      </div>
+    </section>
+    <!-- user-interface end -->
+
+    <!-- tools start -->
+    <section class="py-10">
+      <div class="container">
+        <div class="max-w-[640px] mx-auto text-center pb-10">
+          <h2 class="font-sfBold font-bold text-gray-800 text-2xl lg:text-[32px] lg:leading-[48px]">Integrate Global Tools</h2>
+          <p class="pt-2 text-sm lg:text-base text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est.</p>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- item 1 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/google.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Google</h4>
+            <p class="text-gray-600 text-base">Massa enim libero dictumst consectetur in convallis. Lobortis cursus mi a magna ullamcorper consectetur.</p>
+          </div>
+
+          <!-- item 2 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/gmail.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Gmail</h4>
+            <p class="text-gray-600 text-base">It is a long established fact that a reader will be distracted by the readable content of a page</p>
+          </div>
+
+          <!-- item 3 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/microsoft.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Microsoft</h4>
+            <p class="text-gray-600 text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical</p>
+          </div>
+
+          <!-- item 4 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/slack.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Slack</h4>
+            <p class="text-gray-600 text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature</p>
+          </div>
+
+          <!-- item 5 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/trello.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Trello</h4>
+            <p class="text-gray-600 text-base">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. </p>
+          </div>
+
+          <!-- item 6 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/clickup.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Click Up</h4>
+            <p class="text-gray-600 text-base">If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden</p>
+          </div>
+
+          <!-- item 7 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/zoom.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Zoom</h4>
+            <p class="text-gray-600 text-base">Proin sagittis mattis nisi sit amet tristique. Nullam sed odio sed leo accumsan convallis. </p>
+          </div>
+
+          <!-- item 8 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/brust.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Brust SMS</h4>
+            <p class="text-gray-600 text-base">Aenean vitae dapibus ante. Curabitur eleifend efficitur ultrices. Sed at mollis mi. Fusce fermentum commod</p>
+          </div>
+
+          <!-- item 9 -->
+          <div class="px-4 py-6 lg:p-6">
+            <div class="rounded-lg h-16 w-16 flex items-center justify-center border border-gray-300">
+              <img src="../src/images/saas/drop-box.png" alt="" class="w-full">
+            </div>
+            <h4 class="pt-4 text-xl font-bold font-sfBold text-gray-900">Drop Box</h4>
+            <p class="text-gray-600 text-base">Vivamus sed elit at nulla ultrices consequat eget quis nunc. Nullam a metus mattis, pulvinar sem sed,</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- tools end -->
   </main>
   <!-- main end -->
  
