--- a/index.html
+++ b/index.html
@@ -1462,6 +1462,7 @@
   <script src="src/js/jquery-3.6.1.min.js"></script>
   <script src="src/js/swiper-bundle.min.js"></script>
   <script src="src/js/mixitup.min.js"></script>
+  <script src='src/js/any-image-comparison-slider.min.js'></script>
   <script src="src/js/script.js"></script>
 </body>
 </html>
