mobile app page added

--- a/pages/saas3.html
+++ b/pages/saas3.html
@@ -692,6 +692,131 @@
       </div>
     </section>
     <!-- darl-light-theme end -->
+
+    <!-- pricing start -->
+    <section class="py-10 lg:py-16">
+      <div class="container">
+        <div class="text-center pb-10">
+          <h2 class="font-bold font-sfBold text-gray-800 text-[32px] lg:text-[40px] leading-[38px] lg:leading-[48px]">Pricing Plan</h2>
+          <p class="pt-4 text-base text-gray-600 font-medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- item 1 -->
+          <div class="border border-gray-300 rounded-[10px] py-6 px-4 lg:px-8 transition-all duration-300 group pricing-card hover:bg-gray-100">
+            <div class="h-16 w-16 flex items-center justify-center">
+              <img src="../src/images/icons/badge.svg" alt="">
+            </div>
+            <h4 class="font-bold font-sfBold text-gray-800 text-2xl pt-3 pb-1">Free Plan</h4>
+            <h3 class="text-[40px] leading-[48px] text-primary-900 font-medium">$0 <span class="text-base text-gray-600 font-normal">/monthly</span></h3>
+            <p class="text-sm text-gray-600 py-6">Plan you have chosen, based on the type of plan and price</p>
+            <ul class="space-y-3">
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                Aenean vitae dapibus ante.
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                Curabitur eleifend efficitur ultrices
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                Fusce fermentum commodo tellus
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                In est magna, laoreet id consectetur
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                ut feugiat justo laoreet et.
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                Donec in tellus nisi.
+              </li>
+            </ul>
+            <a href="#" class="block py-2 text-sm text-primary border border-primary rounded-lg text-center mt-8 lg:mt-10 transition-all duration-300 group-hover:bg-primary group-hover:text-white">Start Now</a>
+          </div>
+
+          <!-- item 2 -->
+          <div class="border border-gray-300 rounded-[10px] py-6 px-4 lg:px-8 transition-all duration-300 group pricing-card hover:bg-gray-100">
+            <div class="h-16 w-16 flex items-center justify-center">
+              <img src="../src/images/icons/badge.svg" alt="">
+            </div>
+            <h4 class="font-bold font-sfBold text-gray-800 text-2xl pt-3 pb-1">Start Up Plan</h4>
+            <h3 class="text-[40px] leading-[48px] text-primary-900 font-medium">$10 <span class="text-base text-gray-600 font-normal">/monthly</span></h3>
+            <p class="text-sm text-gray-600 py-6">Plan you have chosen, based on the type of plan and price</p>
+            <ul class="space-y-3">
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                Aenean vitae dapibus ante.
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                Curabitur eleifend efficitur ultrices
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                Fusce fermentum commodo tellus
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                In est magna, laoreet id consectetur
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                ut feugiat justo laoreet et.
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-x-circle text-secondary text-lg"></i>
+                Donec in tellus nisi.
+              </li>
+            </ul>
+            <a href="#" class="block py-2 text-sm text-primary border border-primary rounded-lg text-center mt-8 lg:mt-10 transition-all duration-300 group-hover:bg-primary group-hover:text-white">Start Now</a>
+          </div>
+
+          <!-- item 3 -->
+          <div class="border border-gray-300 rounded-[10px] py-6 px-4 lg:px-8 transition-all duration-300 group pricing-card hover:bg-gray-100">
+            <div class="h-16 w-16 flex items-center justify-center">
+              <img src="../src/images/icons/badge.svg" alt="">
+            </div>
+            <h4 class="font-bold font-sfBold text-gray-800 text-2xl pt-3 pb-1">Exclusive Plan</h4>
+            <h3 class="text-[40px] leading-[48px] text-primary-900 font-medium">$25 <span class="text-base text-gray-600 font-normal">/monthly</span></h3>
+            <p class="text-sm text-gray-600 py-6">Plan you have chosen, based on the type of plan and price</p>
+            <ul class="space-y-3">
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                Aenean vitae dapibus ante.
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                Curabitur eleifend efficitur ultrices
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                Fusce fermentum commodo tellus
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                In est magna, laoreet id consectetur
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                ut feugiat justo laoreet et.
+              </li>
+              <li class="flex items-center gap-3 text-sm font-medium text-gray-800">
+                <i class="ph ph-check-circle text-primary-900 text-lg"></i>
+                Donec in tellus nisi.
+              </li>
+            </ul>
+            <a href="#" class="block py-2 text-sm text-primary border border-primary rounded-lg text-center mt-8 lg:mt-10 transition-all duration-300 group-hover:bg-primary group-hover:text-white">Start Now</a>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- pricing end -->
   </main>
   <!-- main end -->
  
